@@ -75,6 +75,93 @@ M_TEST_DEFINE(doPARv3Assign) {
 	set->deinit(set);
 }
 
+M_TEST_DEFINE(doPARv3Slide1) {
+	struct mCore* core = *state;
+	struct mCheatDevice* device = core->cheatDevice(core);
+	assert_non_null(device);
+	struct mCheatSet* set = device->createSet(device, NULL);
+	assert_non_null(set);
+	GBACheatSetGameSharkVersion((struct GBACheatSet*) set, GBA_GS_PARV3_RAW);
+	assert_true(set->addLine(set, "00000000 80300000", GBA_CHEAT_PRO_ACTION_REPLAY));
+	assert_true(set->addLine(set, "00000001 01020002", GBA_CHEAT_PRO_ACTION_REPLAY));
+
+	core->reset(core);
+	assert_int_equal(core->rawRead8(core, 0x03000000, -1), 0);
+	assert_int_equal(core->rawRead8(core, 0x03000001, -1), 0);
+	assert_int_equal(core->rawRead8(core, 0x03000002, -1), 0);
+	assert_int_equal(core->rawRead8(core, 0x03000003, -1), 0);
+	assert_int_equal(core->rawRead8(core, 0x03000004, -1), 0);
+	assert_int_equal(core->rawRead8(core, 0x03000005, -1), 0);
+
+	mCheatRefresh(device, set);
+	assert_int_equal(core->rawRead8(core, 0x03000000, -1), 1);
+	assert_int_equal(core->rawRead8(core, 0x03000001, -1), 0);
+	assert_int_equal(core->rawRead8(core, 0x03000002, -1), 2);
+	assert_int_equal(core->rawRead8(core, 0x03000003, -1), 0);
+	assert_int_equal(core->rawRead8(core, 0x03000004, -1), 0);
+	assert_int_equal(core->rawRead8(core, 0x03000005, -1), 0);
+
+	set->deinit(set);
+}
+
+M_TEST_DEFINE(doPARv3Slide2) {
+	struct mCore* core = *state;
+	struct mCheatDevice* device = core->cheatDevice(core);
+	assert_non_null(device);
+	struct mCheatSet* set = device->createSet(device, NULL);
+	assert_non_null(set);
+	GBACheatSetGameSharkVersion((struct GBACheatSet*) set, GBA_GS_PARV3_RAW);
+	assert_true(set->addLine(set, "00000000 82300000", GBA_CHEAT_PRO_ACTION_REPLAY));
+	assert_true(set->addLine(set, "00000001 01020002", GBA_CHEAT_PRO_ACTION_REPLAY));
+
+	core->reset(core);
+	assert_int_equal(core->rawRead16(core, 0x03000000, -1), 0);
+	assert_int_equal(core->rawRead16(core, 0x03000002, -1), 0);
+	assert_int_equal(core->rawRead16(core, 0x03000004, -1), 0);
+	assert_int_equal(core->rawRead16(core, 0x03000006, -1), 0);
+	assert_int_equal(core->rawRead16(core, 0x03000008, -1), 0);
+	assert_int_equal(core->rawRead16(core, 0x0300000A, -1), 0);
+
+	mCheatRefresh(device, set);
+	assert_int_equal(core->rawRead16(core, 0x03000000, -1), 1);
+	assert_int_equal(core->rawRead16(core, 0x03000002, -1), 0);
+	assert_int_equal(core->rawRead16(core, 0x03000004, -1), 2);
+	assert_int_equal(core->rawRead16(core, 0x03000006, -1), 0);
+	assert_int_equal(core->rawRead16(core, 0x03000008, -1), 0);
+	assert_int_equal(core->rawRead16(core, 0x0300000A, -1), 0);
+
+	set->deinit(set);
+}
+
+M_TEST_DEFINE(doPARv3Slide4) {
+	struct mCore* core = *state;
+	struct mCheatDevice* device = core->cheatDevice(core);
+	assert_non_null(device);
+	struct mCheatSet* set = device->createSet(device, NULL);
+	assert_non_null(set);
+	GBACheatSetGameSharkVersion((struct GBACheatSet*) set, GBA_GS_PARV3_RAW);
+	assert_true(set->addLine(set, "00000000 84300000", GBA_CHEAT_PRO_ACTION_REPLAY));
+	assert_true(set->addLine(set, "00000001 01020002", GBA_CHEAT_PRO_ACTION_REPLAY));
+
+	core->reset(core);
+	assert_int_equal(core->rawRead32(core, 0x03000000, -1), 0);
+	assert_int_equal(core->rawRead32(core, 0x03000004, -1), 0);
+	assert_int_equal(core->rawRead32(core, 0x03000008, -1), 0);
+	assert_int_equal(core->rawRead32(core, 0x0300000C, -1), 0);
+	assert_int_equal(core->rawRead32(core, 0x03000010, -1), 0);
+	assert_int_equal(core->rawRead32(core, 0x03000014, -1), 0);
+
+	mCheatRefresh(device, set);
+	assert_int_equal(core->rawRead16(core, 0x03000000, -1), 1);
+	assert_int_equal(core->rawRead16(core, 0x03000004, -1), 0);
+	assert_int_equal(core->rawRead16(core, 0x03000008, -1), 2);
+	assert_int_equal(core->rawRead16(core, 0x0300000C, -1), 0);
+	assert_int_equal(core->rawRead16(core, 0x03000010, -1), 0);
+	assert_int_equal(core->rawRead16(core, 0x03000014, -1), 0);
+
+	set->deinit(set);
+}
+
 M_TEST_DEFINE(doPARv3If1) {
 	struct mCore* core = *state;
 	struct mCheatDevice* device = core->cheatDevice(core);
@@ -927,6 +1014,9 @@ M_TEST_SUITE_DEFINE_SETUP_TEARDOWN(GBACheats,
 	cmocka_unit_test(createSet),
 	cmocka_unit_test(addRawPARv3),
 	cmocka_unit_test(doPARv3Assign),
+	cmocka_unit_test(doPARv3Slide1),
+	cmocka_unit_test(doPARv3Slide2),
+	cmocka_unit_test(doPARv3Slide4),
 	cmocka_unit_test(doPARv3If1),
 	cmocka_unit_test(doPARv3If1x1),
 	cmocka_unit_test(doPARv3If2),
