@@ -3,6 +3,7 @@ Bugfixes:
  - GBA Video: Force align 256-color tiles
  - GBA DMA: ROM reads are forced to increment
  - GB Video: Only trigger STAT write IRQs when screen is on (fixes mgba.io/i/912)
+ - GBA Cheats: Fix PARv3 slide codes (fixes mgba.io/i/919)
 
 0.6.1: (2017-10-01)
 Bugfixes:
